Start the 2.0 version of ADEL